Archive2/18/27212acc6bf614/output
main.cpp:2:7: error: expected nested-name-specifier before 'jquery'
 using jquery;
       ^
main.cpp:2:7: error: 'jquery' has not been declared
